--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "11.2.0.0 beta 3"
+version = "11.2.0.0"
 group = "com.noahc3.abilitystones" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "abilstones"
 
