--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,22 @@
-#eclipse
-.project
-.classpath
-.settings/
-.metadata
-*.launch
-org.*
+# eclipse
 bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
 
-#idea
-*.iml
+# idea
+out
 *.ipr
 *.iws
+*.iml
 .idea
-out
 
-#gradle
+# gradle
 build
 .gradle
-modules
-libs
 
-#runtime
+# other
+eclipse
 run
-run_server
-
-#mac
-.DS_Store
